# ROS2-Basics

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/battery_manager/lib/battery_manager/: battery_node  led_panel
install/battery_manager/share/battery_manager/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_counter/lib/my_counter/: number_counter  number_publisher
install/my_counter/share/my_counter/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_cpp_pkg/lib/my_cpp_pkg/: add_two_ints_client  add_two_ints_client_no_oop  add_two_ints_server  cpp_node  hw_status_publisher  robot_news_station  smartphone
install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.sh  package.sh  package.xml
install/my_py_pkg/lib/my_py_pkg/: add_two_ints_client = my_py_pkg.add_two_ints_client:mainhw_status_publisher  (+2 more)
log/: latest_build
src/battery_manager/: CMakeLists.txt
src/battery_manager/src/: LED_panel.cpp  battery.cpp
src/my_counter/: CMakeLists.txt  package.xml
src/my_counter/src/: number_counter.cpp  number_publisher.cpp
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  hardware_status_publisher.cpp  my_first_node.cpp  robot_news_station.cpp  smartphone.cpp
src/my_py_pkg/: setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  my_first_node.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
(+21 files in other folders)
